--- a/De-thi-BNGW.html
+++ b/De-thi-BNGW.html
@@ -3,9 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <title>De-thi-BNGW</title>
+    <link rel="stylesheet" href="libs/bootstrap.3.4.1/css/bootstrap.css">
+    <link rel="stylesheet" href="libs/fontawesome-free-5.15.1/css/all.css">
     <link rel="stylesheet" href="css/De-thi-BNGW.css">
 </head>
 <body>
-
+    <nav class="section nav">
+        <div class="container">
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+    <section class="section main">
+        <div class="container">
+            <div class="content">
+                <img src="img/anoceanofsky.jpg" alt="" width="100%">
+                <div class="content_1">
+                    <h1>An Ocean of Sky</h1>
+                    <p style="color: silver;padding-left: 20px;padding-top: -10px">An XHTML 1.0 Strict Template by
+                        Bryant Smith</p>
+                </div>
+            </div>
+            <div class="aside">
+                <div class="aside_1">
+                    <h2 class="text">The Title of an Article</h2>
+                    <div class="aside_1-1">
+                        <img src="img/durban.jpg" alt="" width="26%">
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Integer mi. Vivamus sit amet neque vitae sapien bibendum sodales. Curabitur elementum. Duis imperdiet. Donec eleifend porttitor sapien. Praesent leo. Quisque auctor velit sed tellus. Suspendisse potenti. Aenean laoreet imperdiet nunc. Donec commodo suscipit dolor. Aenean nibh. Sed id odio. Aliquam lobortis risus ut felis. Sed vehicula pellentesque quam.</p>
+                    </div>
+                </div>
+                <div class="aside_2">
+                    <h2 class="text">So Many Titles, So Little Time.</h2>
+                    <div class="aside_1-2">
+                        <img src="img/touristen_wild_coast.jpg" alt="" width="26%">
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Integer mi. Vivamus sit amet neque vitae sapien bibendum sodales. Curabitur elementum. Duis imperdiet. Donec eleifend porttitor sapien. Praesent leo. Quisque auctor velit sed tellus. Suspendisse potenti. Aenean laoreet imperdiet nunc. Donec commodo suscipit dolor. Aenean nibh. Sed id odio. Aliquam lobortis risus ut felis. Sed vehicula pellentesque quam.</p>
+                    </div>
+                </div>
+                <div class="aside_3">
+                    <h2 class="text">Yet Another One!</h2>
+                    <div class="aside_1-1">
+                        <img src="img/robben-island.jpg" alt="" width="26%">
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Integer mi. Vivamus sit amet neque vitae sapien bibendum sodales. Curabitur elementum. Duis imperdiet. Donec eleifend porttitor sapien. Praesent leo. Quisque auctor velit sed tellus. Suspendisse potenti. Aenean laoreet imperdiet nunc. Donec commodo suscipit dolor. Aenean nibh. Sed id odio. Aliquam lobortis risus ut felis. Sed vehicula pellentesque quam.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="section footer">
+        <div class="container">
+            <img src="img/footer.png" alt="" width="100%">
+            <div style="text-align: center;margin-top: -18px;font-size: 13px">
+                <a href="#" style="color: black">Giới thiệu &ensp;/</a>
+                <a href="#" style="color: black">Chính sách bảo mật&ensp;/</a>
+                <a href="#" style="color: black">Quy chế hoạt động&ensp;/</a>
+                <a href="#" style="color: black">Thỏa thuận chia sẻ nội dung&ensp;</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
