--- a/De-thi-BNGW.html
+++ b/De-thi-BNGW.html
@@ -58,10 +58,10 @@
         <div class="container">
             <img src="img/footer.png" alt="" width="100%">
             <div style="text-align: center;margin-top: -18px;font-size: 13px">
-                <a href="#" style="color: black">Giới thiệu &ensp;/</a>
-                <a href="#" style="color: black">Chính sách bảo mật&ensp;/</a>
-                <a href="#" style="color: black">Quy chế hoạt động&ensp;/</a>
-                <a href="#" style="color: black">Thỏa thuận chia sẻ nội dung&ensp;</a>
+                <a href="#" style="color: black">web development by bryant smith &ensp;|</a>
+                <a href="#" style="color: black">web tutorials&ensp;|</a>
+                <a href="#" style="color: black">html code&ensp;|</a>
+                <a href="#" style="color: black">free templates&ensp;</a>
             </div>
         </div>
     </footer>
