--- a/De-thi-BNGW.html
+++ b/De-thi-BNGW.html
@@ -44,7 +44,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Integer mi. Vivamus sit amet neque vitae sapien bibendum sodales. Curabitur elementum. Duis imperdiet. Donec eleifend porttitor sapien. Praesent leo. Quisque auctor velit sed tellus. Suspendisse potenti. Aenean laoreet imperdiet nunc. Donec commodo suscipit dolor. Aenean nibh. Sed id odio. Aliquam lobortis risus ut felis. Sed vehicula pellentesque quam.</p>
                     </div>
                 </div>
-                <div class="aside_3">
+                <div class="aside_3" style="padding-top: 18px">
                     <h2 class="text">Yet Another One!</h2>
                     <div class="aside_1-1">
                         <img src="img/robben-island.jpg" alt="" width="26%">
